StatGeneratingCLIDriver: Remove NullCleaner call that was complicating formatting.