@@ -188,20 +188,11 @@ public final class StatGeneratingCLIDriver implements SimpleCLIDriver {
 	private static void enterStats(final IMultiMapModel model,
 								   final Iterable<UnitMember> unit, final ICLIHelper cli)
 			throws IOException {
-		final List<Worker> workers = NullCleaner.assertNotNull(StreamSupport
-																	   .stream(unit
-																					   .spliterator(),
-																			   false)
-																	   .filter(Worker
-																					   .class::isInstance)
-																	   .map(Worker
-																					.class::cast)
-																	   .filter(wkr ->
-																					   wkr.getStats() ==
-																							  null)
-																	   .collect
-																				(Collectors
-																						.toList()));
+		final List<Worker> workers = StreamSupport.stream(unit.spliterator(), false)
+											 .filter(Worker.class::isInstance)
+											 .map(Worker.class::cast)
+											 .filter(wkr -> wkr.getStats() == null)
+											 .collect(Collectors.toList());
 		final String hdr = "Which worker do you want to enter stats for?";
 		final String none = "There are no workers without stats in that unit.";
 		final String prompt = "Worker to modify: ";
